// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxGroup custom theme 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 POkRt"
>
  <div
    class="StyledBox-sc-13pk1d4-0 cDhzTU StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jCIPgj"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup defaultValue renders 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 POkRt"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iIwYtW StyledCheckBoxGroup-sc-2nhc5d-0"
      role="group"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
        >
          <input
            checked=""
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 bYtfyY StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
          >
            <svg
              class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 fDntON"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          First
        </span>
      </label>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jHRpNY"
      />
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
          />
        </div>
        <span>
          Second
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckBoxGroup disabled renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 POkRt"
>
  <div
    class="StyledBox-sc-13pk1d4-0 iIwYtW StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ieyUuk"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fqukIn"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jHRpNY"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ieyUuk"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fqukIn"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
          disabled=""
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
  <div
    class="StyledBox-sc-13pk1d4-0 iIwYtW StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ieyUuk"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fqukIn"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
  <div
    class="StyledBox-sc-13pk1d4-0 iIwYtW StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ieyUuk"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fqukIn"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup initial value renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 POkRt"
>
  <div
    class="StyledBox-sc-13pk1d4-0 iIwYtW StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        />
      </div>
      <span>
        Maui
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jHRpNY"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 bYtfyY StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 fDntON"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Jerusalem
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jHRpNY"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 bYtfyY StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 fDntON"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Wuhan
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup labelKey 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 POkRt"
>
  <div
    class="StyledBox-sc-13pk1d4-0 iIwYtW StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jHRpNY"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onChange 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 POkRt"
>
  <div
    class="StyledBox-sc-13pk1d4-0 iIwYtW StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 bYtfyY StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 fDntON"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jHRpNY"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 POkRt"
>
  <div
    class="StyledBox-sc-13pk1d4-0 bMEdYi StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
    tabindex="0"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 bYtfyY StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 fDntON"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jHRpNY"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 POkRt"
>
  <div
    class="StyledBox-sc-13pk1d4-0 bMEdYi StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
    tabindex="0"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jHRpNY"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup options renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 POkRt"
>
  <div
    class="StyledBox-sc-13pk1d4-0 iIwYtW StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        />
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jHRpNY"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup renders without grommet wrapper 1`] = `
<div
  class="StyledBox-sc-13pk1d4-0 iIwYtW StyledCheckBoxGroup-sc-2nhc5d-0"
  role="group"
>
  <label
    class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
    >
      <input
        class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
        type="checkbox"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
      />
    </div>
    <span>
      First
    </span>
  </label>
  <div
    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jHRpNY"
  />
  <label
    class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
    >
      <input
        class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
        type="checkbox"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
      />
    </div>
    <span>
      Second
    </span>
  </label>
</div>
`;

exports[`CheckBoxGroup value renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 POkRt"
>
  <div
    class="StyledBox-sc-13pk1d4-0 iIwYtW StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 bYtfyY StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 fDntON"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jHRpNY"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup valueKey 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 POkRt"
>
  <div
    class="StyledBox-sc-13pk1d4-0 iIwYtW StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jHRpNY"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fmiiKd"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hIHCFf StyledCheckBox-sc-1dbk5ju-6 eRlfae"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cwTBTr"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 lfKhzE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 foOWwW"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;
